--- a/src/BlBundle/Resources/views/Vues/bllist.html.twig
+++ b/src/BlBundle/Resources/views/Vues/bllist.html.twig
@@ -5,7 +5,9 @@
         <img>LOGO LFB</img>
         <button class="btn btn-primary"><a href="{{ path('archives') }}">Fermer</a></button>
     </div>
+<div name="test">
 
+</div>
     <div class="well titre" for="">LISTE DES BONS DE LIVRAISON</div>
 
     <div class="row">
@@ -24,7 +26,7 @@
         <table class="table table-sm table-hover">
             <thead>
             <tr>
-                <th scope="col">N.</th>
+                <th scope="col" id="numbl" name="numbl">N.</th>
                 <th scope="col">N. Pièce</th>
                 <th scope="col">Date Pièce</th>
                 <th scope="col">Client</th>
