Autour de l affichage du form

--- a/src/BlBundle/Resources/views/Vues/accueil.html.twig
+++ b/src/BlBundle/Resources/views/Vues/accueil.html.twig
@@ -21,7 +21,7 @@
 
     <h1>Essai ajout produit</h1>
     <form action="{{ path("articles") }}" method="post">
-{{ form_widget(form) }}
+{{ form_widget(form.numeroBl) }}
         <input type="submit">
         </form>
     <h1>Liste</h1>
