--- a/src/BlBundle/Resources/views/Vues/accueil.html.twig
+++ b/src/BlBundle/Resources/views/Vues/accueil.html.twig
@@ -20,11 +20,18 @@
         </button></a>
 
     <h1>Essai ajout produit</h1>
+    {#===== TEST1 =====#}
     <form action="{{ path("articles") }}" method="post">
-{{ form_widget(form.numeroBl) }}
+{{ form_widget(form, {'method': POST}) }}
         <input type="submit">
         </form>
+    {#===== TEST 2 =====#}
+    {#{{ form_start(form)}}#}
+    {#{{ form_widget(form)}}#}
+    {#{{ form_end(form) }}#}
     <h1>Liste</h1>
+    {#===== END TEST =====#}
+
         {#{% for bonlivraison in bl %}#}
             {#<article>#}
                 {#<header>#}
