Emtities et pages dynamiques en cours

--- a/src/BlBundle/Resources/views/Vues/archives.html.twig
+++ b/src/BlBundle/Resources/views/Vues/archives.html.twig
@@ -1,4 +1,6 @@
 {% extends 'base.html.twig' %}
+{% block header %}
+{% endblock %}
 {% block body %}
 
 
@@ -8,7 +10,7 @@
     <a href="{{ path('factlist') }}"><button class="btn btn-primary" style="width: 800px; height: 100px">
         FACTURES
     </button></a>
-    <a href="{{ path('bl_homepage') }}"><button style="width: 800px; height: 100px">
+    <a href="{{ path('accueil') }}"><button style="width: 800px; height: 100px">
         Revenir sur la page d'accueil
     </button></a>
 
