--- a/src/BlBundle/Resources/views/Vues/listearticles.html.twig
+++ b/src/BlBundle/Resources/views/Vues/listearticles.html.twig
@@ -37,7 +37,7 @@
         <table class="table table-sm table-hover">
             <thead>
             <tr>
-                <th scope="col">N.</th>
+                <th scope="col"></th>
                 <th scope="col">Code</th>
                 <th scope="col">Désignation courte</th>
                 <th scope="col">Famille</th>
@@ -48,16 +48,6 @@
             </tr>
             </thead>
             <tbody>
-            <tr>
-                <th scope="row">1</th>
-                <td>001</td>
-                <td>DC1</td>
-                <td>F1</td>
-                <td>HT1</td>
-                <td>TTC1</td>
-                <td>ST1</td>
-                <td>SR1</td>
-            </tr>
             <tr>
                 <th scope="row">2</th>
                 <td>002</td>
