--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -16,11 +16,13 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>{% block title %}Welcome!{% endblock %}</title>
+    <title>{% block title %}Gestion des Bons de Livraisons{% endblock %}</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <link rel="stylesheet" href="../web/bootstrap-3.3.7-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="web/bootstrap-3.3.7-dist/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
+{% block header %}
+    <img src="{{ asset('logo1lfb.jpg') }}" alt="" style="width: 20%">
+{% endblock %}
     {#IMPORTANT#}
     {#!!!  BOOTSTRAP FONCTIONNE ICI AVEC LE CDN MAIS IL FAUT IMPERATIVEMENT LE REPASSER AVEC LE FICHIER LIÉ#}
     {#AVANT LA CONCLUSION DU PROJET FINAL !!!#}
@@ -28,6 +30,9 @@
     {#<link rel="stylesheet" href="{{ web/bootstrap-3.3.7-dist/css/bootstrap.min.css }}" />#}
 
     {% block stylesheets %}
+        <img src="{{ asset('web/bootstrap-3.3.7-dist/css/bootstrap.min.css') }}" alt="">
+
+
     {% endblock %}
     {#{% stylesheets 'bundles/app/css/*' filter='cssrewrite' %}#}
     {#{% endstylesheets %}#}
