--- a/src/BlBundle/Resources/views/Vues/bllist.html.twig
+++ b/src/BlBundle/Resources/views/Vues/bllist.html.twig
@@ -2,41 +2,40 @@
 
 {% block body %}
     <div>
-        <img>LOGO LFB</img>
-        <button class="btn btn-primary"><a href="{{ path('archives') }}">Fermer</a></button>
+        <a href="{{ path('archives') }}"><button class="btn btn-primary">Revenir sur la page ACCUEIL</button></a>
     </div>
-<div name="test">
+    <br>
 
-</div>
     <div class="well titre" for="">LISTE DES BONS DE LIVRAISON</div>
 
-    <div class="row">
-        <h6 class="col-lg-3">Période du</h6>
-        <input type="date" min="01/01/2018" max="31/12/2018" maxlength="10" autocomplete="on" class="col-lg-3">
-        <h6 class="col-lg-3">au</h6>
-        <select name="" id="" class="col-lg-3">
-            <option value="date1">date1</option>
-            <option value="date2">brackets date</option>
-        </select>
-    </div>
 
     {#ci-dessous la div à imprimer#}
 
-    <div class="jumbotron">
+    <div class="jumbotron" id="listebl">
         <table class="table table-sm table-hover">
             <thead>
             <tr>
                 <th scope="col" id="numbl" name="numbl">N.</th>
-                <th scope="col">N. Pièce</th>
-                <th scope="col">Date Pièce</th>
+                <th scope="col">Date</th>
+                <th scope="col">Description</th>
                 <th scope="col">Client</th>
                 <th scope="col">Société</th>
-                <th scope="col">Total HT</th>
-                <th scope="col">Total TVA</th>
-                <th scope="col">Total TTC</th>
+                <th scope="col">Transporteur</th>
+                <th scope="col">Quantité</th>
             </tr>
             </thead>
             <tbody>
+            {% for bls in bl %}
+                <tr>
+                    <th scope="row">{{ bls.id }}</th>
+                    <td>{{ bls.dateBl.format('j, M Y h:m') }}</td>
+                    <td>{{ bls.descriptionBl }}</td>
+                    <td>{{ bls.clientBl }}</td>
+                    <td>{{ bls.societeBl }}</td>
+                    <td>{{ bls.transporteurBl }}</td>
+                    <td>{{ bls.quantiteBl }}</td>
+                </tr>
+            {% endfor %}
             <tr>
                 <th scope="row"></th>
                 <td></td>
@@ -50,7 +49,6 @@
             </tbody>
         </table>
     </div>
-
     {#    ci-dessus la div à imprimer#}
 
     <div class="row endpage">
@@ -67,12 +65,17 @@
 {% block stylesheets %}
     <style>
         body
-        {
-            margin:5%;
-        }
-        * {text-align:center;}
-        button {
-            margin-top: 40px;
-        }
+            {
+                margin:5%;
+            }
+       header
+       {
+       text-align: center; !important
+       }
+        button
+            {
+                margin-top: 40px;
+            }
+
     </style>
 {% endblock %}
