--- a/src/BlBundle/Resources/views/Vues/bl.html.twig
+++ b/src/BlBundle/Resources/views/Vues/bl.html.twig
@@ -3,15 +3,20 @@
 {% block body %}
 
     <h1>CRÉATION DU BON DE LIVRAISON</h1>
+    <div class="well">{{ "now"|date('d/m/y H:i:s') }}</div>
 
     {#CI-DESSOUS FORMULAIRE PROVISOIRE EN ATTENDANT DE METTRE EN PLACE LES LISTENERS#}
+   <div class="well">
+       {{ form () }}
+   </div>
+
     <div class="well">
         <form action="/accueil">
-            Numéro: <input type="text" name="blnum"><br>
-            Référence client: <input type="text" name="blref"><br>
-            Nom client: <input type="text" name="blclient"><br>
-            Représentant / Contact: <input type="text" name="blcontact"><br>
-            Remarque: <input type="text" name="blrem"><br>
+            <div class="well">Numéro: <input type="text" name="blnum"></div><br>
+            <div class="well">Référence client: <input type="text" name="blref"></div><br>
+            <div class="well">Nom client: <input type="text" name="blclient"></div><br>
+            <div class="well">Représentant / Contact: <input type="text" name="blcontact"></div><br>
+            <div class="well">Remarque: <textarea name="blrem"></textarea></div><br>
             <input type="submit" value="Submit">
         </form>
     </div>
@@ -78,19 +83,6 @@
     {#}#}
     {#//...#}
 
-    <div class="row">
-        <div class="col-lg-6">
-            <div class="well">Numéro</div>
-            <div class="well">{{ "now"|date('d/m/y H:i:s') }}</div>
-            <div class="well">Calendar</div>
-        </div>
-        <div class="col-lg-6">
-            <div class="well">Référence client</div>
-            <div class="well">Nom client</div>
-            <div class="well">Représentant</div>
-            <div class="well">Remarque</div>
-        </div>
-    </div>
 
 
     <div class="jumbotron">
