after a bombers rescue

--- a/src/BlBundle/Resources/views/Vues/bl.html.twig
+++ b/src/BlBundle/Resources/views/Vues/bl.html.twig
@@ -6,9 +6,9 @@
     <div class="well">{{ "now"|date('d/m/y H:i:s') }}</div>
 
     {#CI-DESSOUS FORMULAIRE PROVISOIRE EN ATTENDANT DE METTRE EN PLACE LES LISTENERS#}
-   <div class="well">
-       {{ form () }}
-   </div>
+<div class="well">
+    {{ form(form) }}
+</div>
 
     <div class="well">
         <form action="/accueil">
