--- a/src/BlBundle/Resources/views/Vues/bllist.html.twig
+++ b/src/BlBundle/Resources/views/Vues/bllist.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
     <div>
-        <a href="{{ path('archives') }}"><button class="btn btn-primary">Revenir sur la page ACCUEIL</button></a>
+        <a href="{{ path('accueil') }}"><button class="btn btn-primary">Revenir sur la page ACCUEIL</button></a>
     </div>
     <br>
 
