Avant création formulaire détaché avec BonsType

--- a/src/BlBundle/Resources/views/Vues/bllist.html.twig
+++ b/src/BlBundle/Resources/views/Vues/bllist.html.twig
@@ -6,7 +6,7 @@
     </div>
     <br>
 
-    <div class="well titre" for="">LISTE DES BONS DE LIVRAISON</div>
+    <h1>LISTE DES BONS DE LIVRAISON</h1>
 
 
     {#ci-dessous la div à imprimer#}
