--- a/src/BlBundle/Resources/views/Vues/bl.html.twig
+++ b/src/BlBundle/Resources/views/Vues/bl.html.twig
@@ -22,7 +22,7 @@
         {# Génération manuelle et éclatée : #}
         <div class="form-group">
             {# Génération du label. #}
-            {{ form_label(form.numeroBl, "Titre de l'annonce", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
+            {{ form_label(form.numeroBl, "Numero de Bon", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
 
             {# Affichage des erreurs pour ce champ précis. #}
             {{ form_errors(form.numeroBl) }}
@@ -33,15 +33,54 @@
             </div>
         </div>
 
-        {# Idem pour un autre champ. #}
+        {# Idem pour le champ Descr. #}
         <div class="form-group">
-            {{ form_label(form.descriptionBl, "Contenu de l'annonce", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
+            {{ form_label(form.descriptionBl, "Description", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
             {{ form_errors(form.descriptionBl) }}
             <div class="col-sm-10">
                 {{ form_widget(form.descriptionBl, {'attr': {'class': 'form-control'}}) }}
             </div>
         </div>
 
+        <div class="form-group">
+          {# Idem pour le champ Client. #}
+            {{ form_label(form.clientBl, "Client", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
+            {{ form_errors(form.clientBl) }}
+                <div class="col-sm-10">
+                    {# Génération de l'input. #}
+                    {{ form_widget(form.clientBl, {'attr': {'class': 'form-control'}}) }}
+                </div>
+        </div>
+
+        <div class="form-group">
+          {# Idem pour le champ Transporteur. #}
+            {{ form_label(form.transporteurBl, "Code client", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
+            {{ form_errors(form.transporteurBl) }}
+                <div class="col-sm-10">
+                    {# Génération de l'input. #}
+                    {{ form_widget(form.transporteurBl, {'attr': {'class': 'form-control'}}) }}
+                </div>
+        </div>
+
+        <div class="form-group">
+          {# Idem pour le champ Société. #}
+            {{ form_label(form.societeBl, "Société", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
+            {{ form_errors(form.societeBl) }}
+                <div class="col-sm-10">
+                    {# Génération de l'input. #}
+                    {{ form_widget(form.societeBl, {'attr': {'class': 'form-control'}}) }}
+                </div>
+        </div>
+
+        <div class="form-group">
+          {# Idem pour le champ Quantité. #}
+            {{ form_label(form.quantiteBl, "Quantité", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
+            {{ form_errors(form.quantiteBl) }}
+                <div class="col-sm-10">
+                    {# Génération de l'input. #}
+                    {{ form_widget(form.quantiteBl, {'attr': {'class': 'form-control'}}) }}
+                </div>
+        </div>
 
 
         {# Génération automatique des champs pas encore écrits.
