--- a/src/BlBundle/Resources/views/Vues/blpreview.html.twig
+++ b/src/BlBundle/Resources/views/Vues/blpreview.html.twig
@@ -1,25 +1,12 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div>
-        <img>LOGO LFB</img>
-        <button class="btn btn-primary"><a href="{{ path('archives') }}">Fermer</a></button>
-    </div>
-
-    <div class="well titre" for="">LISTE DES BONS DE LIVRAISON</div>
-
-    <div class="row">
-        <h6 class="col-lg-3">Période du</h6>
-        <input type="date" min="01/01/2018" max="31/12/2018" maxlength="10" autocomplete="on" class="col-lg-3">
-        <h6 class="col-lg-3">au</h6>
-        <select name="" id="" class="col-lg-3">
-            <option value="date1">date1</option>
-            <option value="date2">brackets date</option>
-        </select>
-    </div>
-
-    {#ci-dessous la div à imprimer#}
-
+<div class="well">
+<h1>BON DE LIVRAISON</h1>
+<h2>N. {{ bons.id }} </h2>
+<p>{{ "now"|date(' d m Y H:i') }}</p>
+<!-- <div class="">numeroBl</div> -->
+</div>
     <div class="jumbotron">
         <table class="table table-sm table-hover">
             <thead>
@@ -38,7 +25,7 @@
             <tr>
                 <th scope="row"></th>
                 <td></td>
-                <td></td>
+                <td>{{ "now"|date(' d m Y') }}</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -52,13 +39,10 @@
     {#    ci-dessus la div à imprimer#}
 
     <div class="row endpage">
-        <div class="col-lg-6">
-            <img src="" alt="" name="printpic">
-            <h5>IMPRIMER</h5>
-        </div>
-        <div class="row col-lg-6">
-            <button class="col-lg-6 left" name="left">preview</button>
-            <button class="col-lg-6 right" name="right">next</button>
+
+        <div class="well">
+          <a href="{{ path('accueil') }}"><button class="btn btn-success glyphicon glyphicon-print" style="width: 300px; height: 60px"> Imprimer</button></a>
+          <a href="{{ path('accueil') }}"><button class="btn btn-danger" style="width: 300px; height: 60px">Annuler</button></a>
         </div>
     </div>
 {% endblock %}
@@ -68,7 +52,6 @@
         {
             margin:5%;
         }
-        * {text-align:center;}
         button {
             margin-top: 40px;
         }
