--- a/src/BlBundle/Resources/views/Vues/factures.html.twig
+++ b/src/BlBundle/Resources/views/Vues/factures.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Création d'une facture Pro Forma</h1>
+    <h1>Créer une Facture</h1>
     <div class="row">
         <div class="col-lg-6">
             <input type="text" placeholder="Numéro">
