Avant de passer à la Pagination

--- a/src/BlBundle/Resources/views/Vues/bl.html.twig
+++ b/src/BlBundle/Resources/views/Vues/bl.html.twig
@@ -88,8 +88,9 @@
            et tous les champs cachés (type « hidden »). #}
         {{ form_rest(form) }}
 
-        {{ form_row(form.categories) }}
-          <a href="#" id="add_category" class="btn btn-default">Ajouter une catégorie</a>
+        <!-- ci-dessous, les catégories préparées en vue de sélectionner ultérieurement les bons par année ou par un autre critère -->
+        <!-- { form_row(form.categories) }} -->
+          <!-- <a href="#" id="add_category" class="btn btn-default">Ajouter une catégorie</a> -->
 
 
         <div class="bdp">
