--- a/src/BlBundle/Resources/views/Vues/factlist.html.twig
+++ b/src/BlBundle/Resources/views/Vues/factlist.html.twig
@@ -1,38 +1,39 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div>
-        <img>LOGO LFB</img>
-        <button class="btn btn-primary"><a href="{{ path('archives') }}">Fermer</a></button>
-    </div>
+<div class="container">
 
-    <div class="well titre" for="">LISTE DES FACTURES</div>
+    <h1>LISTE DES FACTURES</h1>
 
-    <div class="row">
-        <h6 class="col-lg-3">Période du</h6>
-        <input type="date" min="01/01/2018" max="31/12/2018" maxlength="10" autocomplete="on" class="col-lg-3">
-        <h6 class="col-lg-3">au</h6>
-        <select name="" id="" class="col-lg-3">
-            <option value="date1">date1</option>
-            <option value="date2">brackets date</option>
-        </select>
-    </div>
 
     {#ci-dessous la div à imprimer#}
 
-    <div class="jumbotron">
+    <div class="jumbotron" id="listebl">
         <table class="table table-sm table-hover">
             <thead>
             <tr>
-                <th scope="col">N.</th>
                 <th scope="col">Date</th>
-                <th scope="col">Client</th>
-
+                <th scope="col" id="numbl" name="numbl">Numero</th>
+                <th scope="col">reference</th>
+                <th scope="col">Désignation</th>
+                <th scope="col">Quantité</th>
+                <th scope="col">Total HT</th>
+                <th scope="col">Total TTC</th>
+                <th></th>
             </tr>
             </thead>
             <tbody>
+
+                <tr>
+ <!-- A COMPLETER -->
+                </tr>
+
             <tr>
                 <th scope="row"></th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -40,29 +41,41 @@
             </tbody>
         </table>
     </div>
-
     {#    ci-dessus la div à imprimer#}
 
-    <div class="row endpage">
-        <div class="col-lg-6">
-            <img src="" alt="" name="printpic">
-            <h5>IMPRIMER</h5>
-        </div>
-        <div class="row col-lg-6">
-            <button class="col-lg-6 left" name="left">preview</button>
-            <button class="col-lg-6 right" name="right">next</button>
+    <div class="row baspage">
+
+        <div class="well">
+          <a href="{{ path('accueil') }}"><button class="btn btn-success glyphicon glyphicon-print" style="width: 300px; height: 60px"> Imprimer</button></a>
+          <a href="{{ path('accueil') }}"><button class="btn btn-danger" style="width: 300px; height: 60px">Annuler</button></a>
+          <a href="{{ path('factures') }}"><button class="btn btn-primary" style="width: 300px; height: 60px">Nouvelle Facture</button></a>
+
         </div>
     </div>
+</div>
 {% endblock %}
 {% block stylesheets %}
     <style>
         body
-        {
-            margin:5%;
-        }
-        * {text-align:center;}
-        button {
-            margin-top: 40px;
-        }
-    </style>
+            {
+                margin:5%;
+            }
+       header
+       {
+       text-align: center; !important
+       }
+        button
+            {
+                margin-top: 40px;
+            }
+        .baspage
+            {
+                text-align: center;
+            }
+        .entete
+            {
+                margin: auto;
+                padding-left: 40px;
+            }
+      </style>
 {% endblock %}
