--- a/src/BlBundle/Resources/views/Vues/blpreview.html.twig
+++ b/src/BlBundle/Resources/views/Vues/blpreview.html.twig
@@ -42,7 +42,7 @@
 
         <div class="well">
           <a href="{{ path('accueil') }}"><button class="btn btn-success glyphicon glyphicon-print" style="width: 300px; height: 60px"> Imprimer</button></a>
-          <a href="{{ path('accueil') }}"><button class="btn btn-danger" style="width: 300px; height: 60px">Annuler</button></a>
+          <a href="{{ path('bllist') }}"><button class="btn btn-primary" style="width: 300px; height: 60px">Liste des Bons</button></a>
         </div>
     </div>
     </div>
