--- a/src/BlBundle/Resources/views/Vues/bl.html.twig
+++ b/src/BlBundle/Resources/views/Vues/bl.html.twig
@@ -19,18 +19,6 @@
             {{ form_row(form.dateBl) }}
 
         {# Génération manuelle et éclatée : #}
-        <div class="form-group">
-            {# Génération du label. #}
-            {{ form_label(form.numeroBl, "Numero de Bon", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
-
-            {# Affichage des erreurs pour ce champ précis. #}
-            {{ form_errors(form.numeroBl) }}
-
-            <div class="col-sm-10">
-                {# Génération de l'input. #}
-                {{ form_widget(form.numeroBl, {'attr': {'class': 'form-control'}}) }}
-            </div>
-        </div>
 
         {# Idem pour le champ Descr. #}
         <div class="form-group">
@@ -56,7 +44,7 @@
 
         <div class="form-group">
           {# Idem pour le champ Transporteur. #}
-            {{ form_label(form.transporteurBl, "Code client", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
+            {{ form_label(form.transporteurBl, "Transporteur", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
             {{ form_errors(form.transporteurBl) }}
                 <div class="col-sm-10">
                     {# Génération de l'input. #}
@@ -66,7 +54,7 @@
 
         <div class="form-group">
           {# Idem pour le champ Société. #}
-            {{ form_label(form.societeBl, "Société", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
+            {{ form_label(form.societeBl, "Article", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
             {{ form_errors(form.societeBl) }}
                 <div class="col-sm-10">
                     {# Génération de l'input. #}
